Update the pom.xml